fix: adjust hero-left dimensions to align with brief

--- a/style.css
+++ b/style.css
@@ -94,12 +94,11 @@ main {
 .hero-content {
   display: flex;
   justify-content: space-between;
-  /* gap: 32px;*/
   width: 70%;
 }
 
 .hero-text {
-  width: 80%;
+  width: 85%;
 }
 
 .hero-img {
